--- a/www/templates/general.html
+++ b/www/templates/general.html
@@ -1,4 +1,4 @@
-<ion-view view-title="#general">
+<ion-view view-title="#general <i class='icon ion-arrow-down-b'></i>">
   <ion-content>
     <ion-list>
 
