--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-light">
+    <ion-nav-bar class="bar-light slack-bar">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
