--- a/www/lib/slackUI/scss/_bar.scss
+++ b/www/lib/slackUI/scss/_bar.scss
@@ -7,6 +7,7 @@
 
   .title.title-left.header-item {
     font-weight: 800;
+    left: 48px !important;
 
     .icon {
       color: rgba(0, 0, 0, 0.25);
