--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -5,7 +5,7 @@
       </ion-nav-back-button>
 
       <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear button-positive ion-grid" menu-toggle="left"></button>
+        <button class="button slack-button" menu-toggle="left"></button>
       </ion-nav-buttons>
 
       <ion-nav-buttons side="right">
