- slack button image

--- a/www/lib/slackUI/scss/_button.scss
+++ b/www/lib/slackUI/scss/_button.scss
@@ -6,7 +6,7 @@
 .slack-button {
 
   border: none;
-  background: url(/img/slack.png) no-repeat center center;
+  background: url('/img/slack.png') no-repeat center center;
   background-size: 28px;
   width: 42px;
 }
