- status bar hide on menu toggle

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -17,7 +17,7 @@
   </ion-side-menu-content>
 
 
-  <ion-side-menu side="left" class="slack-menu-left" width="305">
+  <ion-side-menu watch-menu side="left" class="slack-menu-left" width="305">
     <ion-header-bar class="item-input-inset">
       <label class="item-input-wrapper">
         <i class="icon ion-ios-search placeholder-icon"></i>
@@ -51,7 +51,7 @@
   </ion-side-menu>
 
 
-  <ion-side-menu side="right" width="220">
+  <ion-side-menu watch-menu side="right" width="220">
 
     <ion-content class="dark-bg">
       <ion-list>
