--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9824,6 +9824,12 @@ a.button {
     background: rgba(0, 0, 0, 0.16); }
     .slack-menu-left.menu.menu-left .bar.bar-header.item-input-inset {
       padding-top: 0px !important; }
+      .slack-menu-left.menu.menu-left .bar.bar-header.item-input-inset img {
+        width: 28px;
+        height: 28px;
+        margin-right: 11px;
+        background: #fff;
+        border-radius: 3px; }
       .slack-menu-left.menu.menu-left .bar.bar-header.item-input-inset .item-input-wrapper {
         background: rgba(0, 0, 0, 0.2); }
         .slack-menu-left.menu.menu-left .bar.bar-header.item-input-inset .item-input-wrapper i.icon.placeholder-icon {
