--- a/www/lib/slackUI/scss/_menus.scss
+++ b/www/lib/slackUI/scss/_menus.scss
@@ -21,6 +21,14 @@
 
         padding-top: 0px !important;
 
+        img{
+          width: 28px;
+          height: 28px;
+          margin-right: 11px;
+          background: #fff;
+          border-radius: 3px;
+        }
+
         .item-input-wrapper{
           background: rgba(0, 0, 0, .2);
 
