--- a/www/lib/slackUI/scss/_bar.scss
+++ b/www/lib/slackUI/scss/_bar.scss
@@ -6,7 +6,7 @@
 .slack-bar {
 
   .title.title-left.header-item {
-    font-weight: 800;
+    font-weight: bold;
     left: 48px !important;
 
     .icon {
@@ -16,4 +16,72 @@
     }
   }
 
+
+  .right-buttons{
+
+    .button.button-icon.button-clear{
+
+      margin-left: 4px;
+      margin-right: 7px;
+
+      &::before{
+        font-size: 25px !important;
+
+      }
+
+    }
+  }
+
+}
+
+.slack-menssage-bar{
+
+  background-image: linear-gradient(0deg, #737373, #FFFFFF 50%, transparent 50%) !important;
+
+  .icon {
+    font-size: 26px;
+    margin-right: 8px;
+    color: rgba(0, 0, 0, 0.4);
+  }
+
+  .item-input-wrapper {
+
+    background: $light;
+    border: 1px solid #eee;
+
+    -webkit-transition: all 1s ease-in-out;
+    -moz-transition: all 1s ease-in-out;
+    -o-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+
+    input {
+
+
+      &::-webkit-input-placeholder{
+
+        color: rgba(0, 0, 0, 0.3) !important;
+
+      }
+    }
+
+  }
+
+  .button {
+
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+
+    padding: 0px;
+    font-weight: bold !important;
+    margin-left: 4px;
+    margin-right: -5px;
+    font-size: 13px;
+
+
+    &.ocultar{
+      display: none;
+    }
+  }
 }
