--- a/www/templates/general.html
+++ b/www/templates/general.html
@@ -1,7 +1,21 @@
 <ion-view view-title="#general <i class='icon ion-arrow-down-b'></i>">
+
+
   <ion-content>
     <ion-list>
 
     </ion-list>
   </ion-content>
+
+  <div keyboard-attach class="bar bar-footer bar-stable item-input-inset slack-menssage-bar">
+    <i class="icon ion-ios-plus-outline"></i>
+    <label class="item-input-wrapper">
+      <input type="text" placeholder="Message" ng-model="message.text">
+    </label>
+    <button ng-class="{ocultar:!message.text}" ng-click="sendMessage(message)" class="button button-clear button-positive">
+      Send
+    </button>
+
+  </div>
+
 </ion-view>
