--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -9,6 +9,7 @@
       </ion-nav-buttons>
 
       <ion-nav-buttons side="right">
+        <button class="button button-icon button-clear ion-ios-search"></button>
         <button class="button button-icon button-clear ion-ios-more" menu-toggle="right"></button>
       </ion-nav-buttons>
 
